<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_weight="1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

            <Switch
                android:id="@+id/settings_switch_use_gps"
                android:text="@string/settings_label_use_gps"
                android:layout_width="match_parent"
                style="@style/text_medium"
                android:layout_height="wrap_content"/>

            <Switch
                android:text="@string/settings_label_use_network_provider"
                android:id="@+id/settings_switch_use_network_provider"
                android:layout_width="match_parent"
                style="@style/text_medium"
                android:layout_height="wrap_content"/>

            <Switch
                android:text="@string/settings_label_use_tts"
                android:id="@+id/settings_switch_use_tts"
                android:layout_width="match_parent"
                style="@style/text_medium"
                android:layout_height="wrap_content"/>

            <Switch
                android:text="@string/settings_label_allow_map_gestures"
                android:id="@+id/settings_switch_allow_map_gestures"
                android:layout_width="match_parent"
                style="@style/text_medium"
                android:layout_height="wrap_content"/>

            <Switch
                android:text="@string/settings_label_hide_users_alerts"
                android:id="@+id/settings_switch_hide_users_alerts"
                android:layout_width="match_parent"
                style="@style/text_medium"
                android:layout_height="wrap_content"/>

            <Switch
                android:text="@string/settings_label_allow_photos"
                android:id="@+id/settings_switch_allow_photos"
                android:layout_width="match_parent"
                style="@style/text_medium"
                android:layout_height="wrap_content"/>

            <Switch
                android:text="@string/settings_label_use_time_filter"
                android:id="@+id/settings_switch_use_time_filter"
                android:layout_width="match_parent"
                style="@style/text_medium"
                android:layout_height="wrap_content"/>

            <Switch
                android:text="@string/settings_label_keep_files"
                android:id="@+id/settings_switch_keep_files"
                android:layout_width="match_parent"
                style="@style/text_medium"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/settings_label_alert_check_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <EditText
                android:id="@+id/settings_input_alert_check_interval"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>

            <TextView
                android:text="@string/settings_label_service_uri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <EditText
                android:id="@+id/settings_input_alert_service_uri"
                android:inputType="textUri"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_hint_service_uri"
                style="@style/text_medium"/>

            <TextView
                android:text="@string/settings_label_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <EditText
                android:id="@+id/settings_input_range"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>

            <TextView
                android:text="@string/settings_label_min_location_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <EditText
                android:id="@+id/settings_input_min_location_distance"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>

            <TextView
                android:text="@string/settings_label_min_location_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <EditText
                android:id="@+id/settings_input_min_location_time"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>

            <TextView
                android:text="@string/settings_label_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <EditText
                android:id="@+id/settings_input_username"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>

            <TextView
                android:text="@string/settings_label_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <EditText
                android:id="@+id/settings_input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>

            <TextView
                android:text="@string/settings_label_listen_group_ids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <EditText
                android:id="@+id/settings_input_listen_group_ids"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_hint_listen_group_ids"
                style="@style/text_medium"/>

            <TextView
                android:text="@string/settings_label_listen_alert_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/settings_layout_listen_alert_types"/>

            <TextView
                android:text="@string/settings_label_report_group_ids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <EditText
                android:id="@+id/settings_input_report_group_ids"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/settings_hint_report_group_ids"
                style="@style/text_medium"/>

            <TextView
                android:text="@string/settings_label_report_alert_types"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/settings_layout_report_alert_types"/>

            <Button
                android:id="@+id/settings_button_save"
                android:text="@string/settings_label_button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/text_medium"/>

    </LinearLayout>

</ScrollView>